# crazyplayer

./: AudioInfoBox.qml  ButtonImage.qml  CMakeLists.txt  Main.qml  main.cpp  playercontroller.cpp  playercontroller.h
